--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
+  min-width: 100vw;
   margin: 0;
+  padding: 5px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
